Frontend fixed, mainly overflow in chat component

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -21,7 +21,7 @@ body {
     background-color: black;
 }
 
-#app-layout > main {
+#app-layout > main:not(:has(#test-chat)) {
 
     max-height: 100vh;
     overflow: scroll;
